--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ jwt.expiration=3600000
 spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.timeout=6000
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=1MB
